main page in progress

--- a/mainpage.html
+++ b/mainpage.html
@@ -47,18 +47,31 @@
         </div>
     </div>
 
-    <h1>Series Gallery</h1>
     <div class="gallery-container">
-      
+        <h1 class="text-center">Series Gallery</h1>
+
+        <div class="row justify-content-around">
+    <div class="col-md-6">
     <img src="https://img.hulu.com/user/v3/artwork/bb6ff324-da2a-4613-8587-d0f432d9a426?base_image_bucket_name=image_manager&base_image=b8f23b1c-7105-4d9a-a375-ccf6bd8142fb&size=600x338&format=jpeg"/>
     <img src="https://cdn.vox-cdn.com/thumbor/hxcXFuvvrUnEOkwk0f3m120t9nY=/0x0:2781x1854/1200x0/filters:focal(0x0:2781x1854):no_upscale()/cdn.vox-cdn.com/uploads/chorus_asset/file/16677777/THT_SG_306_00661RT_f.jpg"/>
     <img src="https://i.guim.co.uk/img/media/e544aaa6df60806953ac5b5f97ef3380dd930cab/0_0_3000_2000/master/3000.jpg?width=445&dpr=1&s=none"/>
+    </div>
+
+    <div class="col-md-6">
     <img src="https://media.vanityfair.com/photos/648b9a1979d44e2cb64edaca/master/w_1600%2Cc_limit/image005.jpeg"/>
     <img src="https://static01.nyt.com/images/2018/06/13/arts/television/13handmaid-recap/13handmaid-recap-superJumbo.jpg"/>
     <img src="https://s2.r29static.com/bin/entry/07e/x,80/1957716/image.jpg"/>
-    
     </div>
 
+
+    </div>
+    </div>
+
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
     <footer>
         Coded by Leticia Gmx 🇲🇽 Open-source Github 💻 Hosted on Netlify 
     </footer>
