Main page in progress
decided to start all over again practicing a previous design skill.

--- a/mainpage.html
+++ b/mainpage.html
@@ -25,6 +25,28 @@
         </nav>
     </header>
 
+<button>dark theme</button>
+
+<h1>Dystopian TV Series</h1>
+<h2>The Handmaid Tale's</h2>
+
+<p>The Handmaid's Tale is an American dystopian television series created by Bruce Miller,
+    based on the 1985 novel of the same name by Canadian author Margaret Atwood.  
+</p>
+
+<button>More about the series</button>
+
+<img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/836/original/MARGARET-ATWOOD-MARKIAN-LOZOWCHUK-BETHUNE-SEPT06-810x810-1567799151.jpg?1707105227"/>  
+<img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/841/original/THT1.jpeg?1707105859"/>   
+
+<br />
+<br />
+<br />
+<br />
+<br />
+<footer>
+    Coded by Leticia Gmx 🇲🇽 Open-source on <a href="https://github.com/lggomez18/Binge-Worthy-TVShow-Challenge">Github</a>💻 Hosted on Netlify 
+</footer>
 
     <div class="img-container">
         <div class="inner-container">
@@ -36,9 +58,7 @@
     <div class="content-container text-center">
         <div class="row align-items-start">
             <div class="col-md-6">
-            <p> The Handmaid's Tale is an American dystopian television series created by Bruce Miller,
-            based on the 1985 novel of the same name by Canadian author Margaret Atwood.  
-            </p>
+            
             </div>
 
             <div class="col-md-6">
@@ -64,17 +84,7 @@
     </div>
 
 
-    </div>
-    </div>
-
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <footer>
-        Coded by Leticia Gmx 🇲🇽 Open-source Github 💻 Hosted on Netlify 
-    </footer>
+  
 
 </body>
 </html>
