CSS styling container

--- a/mainpage.html
+++ b/mainpage.html
@@ -25,7 +25,10 @@
         </nav>
     </header>
 
-<button>dark theme</button>
+    <button>dark theme</button>
+
+<div class="container">
+
 
 <h1>Dystopian TV Series</h1>
 <h2>The Handmaid Tale's</h2>
@@ -39,6 +42,7 @@
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/836/original/MARGARET-ATWOOD-MARKIAN-LOZOWCHUK-BETHUNE-SEPT06-810x810-1567799151.jpg?1707105227"/>  
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/841/original/THT1.jpeg?1707105859"/>   
 
+</div>
 <br />
 <br />
 <br />
@@ -47,6 +51,13 @@
 <footer>
     Coded by Leticia Gmx 🇲🇽 Open-source on <a href="https://github.com/lggomez18/Binge-Worthy-TVShow-Challenge">Github</a>💻 Hosted on Netlify 
 </footer>
+
+
+
+
+
+
+
 
     <div class="img-container">
         <div class="inner-container">
