--- a/mainpage.html
+++ b/mainpage.html
@@ -10,6 +10,10 @@
 
     <link rel="stylesheet" href="src/styles.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -25,19 +29,19 @@
         </nav>
     </header>
 
-    <button>dark theme</button>
+<button class="theme-button">dark theme</button>
 
 <div class="container">
 
 
 <h1>Dystopian TV Series</h1>
-<h2>The Handmaid Tale's</h2>
+<h2>THE HANDMAID'S TALE</h2>
 
-<p>The Handmaid's Tale is an American dystopian television series created by Bruce Miller,
+<p>The Handmaid's Tale is an American dystopian television series created by Bruce Miller, 
     based on the 1985 novel of the same name by Canadian author Margaret Atwood.  
 </p>
 
-<button>More about the series</button>
+<button><a href="https://en.wikipedia.org/wiki/The_Handmaid%27s_Tale_(TV_series)"> More about the series</a></button>
 
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/836/original/MARGARET-ATWOOD-MARKIAN-LOZOWCHUK-BETHUNE-SEPT06-810x810-1567799151.jpg?1707105227"/>  
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/841/original/THT1.jpeg?1707105859"/>   
@@ -51,51 +55,5 @@
 <footer>
     Coded by Leticia Gmx 🇲🇽 Open-source on <a href="https://github.com/lggomez18/Binge-Worthy-TVShow-Challenge">Github</a>💻 Hosted on Netlify 
 </footer>
-
-
-
-
-
-
-
-
-    <div class="img-container">
-        <div class="inner-container">
-            <a class="btn" href="#"></a>
-        </div>
-    </div>
-
-
-    <div class="content-container text-center">
-        <div class="row align-items-start">
-            <div class="col-md-6">
-            
-            </div>
-
-            <div class="col-md-6">
-                <img src="img/author" alt="Image of the book author Margaret Atwood"/>
-            </div>
-        </div>
-    </div>
-
-    <div class="gallery-container">
-        <h1 class="text-center">Series Gallery</h1>
-
-        <div class="row justify-content-around">
-    <div class="col-md-6">
-    <img src="https://img.hulu.com/user/v3/artwork/bb6ff324-da2a-4613-8587-d0f432d9a426?base_image_bucket_name=image_manager&base_image=b8f23b1c-7105-4d9a-a375-ccf6bd8142fb&size=600x338&format=jpeg"/>
-    <img src="https://cdn.vox-cdn.com/thumbor/hxcXFuvvrUnEOkwk0f3m120t9nY=/0x0:2781x1854/1200x0/filters:focal(0x0:2781x1854):no_upscale()/cdn.vox-cdn.com/uploads/chorus_asset/file/16677777/THT_SG_306_00661RT_f.jpg"/>
-    <img src="https://i.guim.co.uk/img/media/e544aaa6df60806953ac5b5f97ef3380dd930cab/0_0_3000_2000/master/3000.jpg?width=445&dpr=1&s=none"/>
-    </div>
-
-    <div class="col-md-6">
-    <img src="https://media.vanityfair.com/photos/648b9a1979d44e2cb64edaca/master/w_1600%2Cc_limit/image005.jpeg"/>
-    <img src="https://static01.nyt.com/images/2018/06/13/arts/television/13handmaid-recap/13handmaid-recap-superJumbo.jpg"/>
-    <img src="https://s2.r29static.com/bin/entry/07e/x,80/1957716/image.jpg"/>
-    </div>
-
-
-  
-
 </body>
 </html>
