--- a/mainpage.html
+++ b/mainpage.html
@@ -45,6 +45,8 @@
 
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/836/original/MARGARET-ATWOOD-MARKIAN-LOZOWCHUK-BETHUNE-SEPT06-810x810-1567799151.jpg?1707105227"/>  
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/841/original/THT1.jpeg?1707105859"/>   
+<img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/358/original/THT2.jpeg?1707360338"/>
+<img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/360/original/tht3.jpeg?1707360662"/>
 
 </div>
 <br />
