--- a/mainpage.html
+++ b/mainpage.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="src/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -43,21 +43,34 @@
 
 <button><a href="https://en.wikipedia.org/wiki/The_Handmaid%27s_Tale_(TV_series)"> More about the series</a></button>
 
-<img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/836/original/MARGARET-ATWOOD-MARKIAN-LOZOWCHUK-BETHUNE-SEPT06-810x810-1567799151.jpg?1707105227"
-alt=""
-class="authorpicture"/>  
+<a href="https://margaretatwood.ca"><img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/836/original/MARGARET-ATWOOD-MARKIAN-LOZOWCHUK-BETHUNE-SEPT06-810x810-1567799151.jpg?1707105227"
+alt="picture of the author sorrounded by handmaids in the back looking down"
+class="authorpicture"/></a> 
+
+<p> Her motivation for writing the novel was her belief that in the 1980s, 
+    the religious right was discussing what they would do with/to women if they took power, 
+    including the Moral Majority and the Christian Coalition. 
+</p>
+
+<p> Margaret Atwood is author of many other dystopian novels, including the famous <i>MaddAddam Trilogy</i>.</p>
+
+<div class="grid">
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/841/original/THT1.jpeg?1707105859"/>   
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/358/original/THT2.jpeg?1707360338"/>
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/360/original/tht3.jpeg?1707360662"/>
-
+<img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/526/original/tht4.jpeg?1707447078"/>
 </div>
+</div>
+
 <br />
 <br />
 <br />
 <br />
 <br />
 <footer>
-    Coded by Leticia Gmx 🇲🇽 Open-source on <a href="https://github.com/lggomez18/Binge-Worthy-TVShow-Challenge">Github</a>💻 Hosted on Netlify 
+    Coded by Leticia Gmx 🇲🇽 Open-source on <a href="https://github.com/lggomez18/Binge-Worthy-TVShow-Challenge">Github</a>💻
 </footer>
+
+
 </body>
 </html>
