--- a/mainpage.html
+++ b/mainpage.html
@@ -18,7 +18,6 @@
 <body class="dark">
 
     <header class="header">
-        <a href="#" class="logo">lg</a>
 
         <nav class="navbar">
             <a href="#">home</a>
@@ -36,6 +35,18 @@
 
 <h1>Dystopian TV Series</h1>
 <h2>THE HANDMAID'S TALE</h2>
+
+<video autoplay muted loop id="myVideo">
+    <source src="rain.mp4" type="video/mp4">
+  </video>
+  
+  <!-- Optional: some overlay text to describe the video -->
+  <div class="content">
+    <h1>Heading</h1>
+    <p>Lorem ipsum...</p>
+    <!-- Use a button to pause/play the video with JavaScript -->
+    <button id="myBtn" onclick="myFunction()">Pause</button>
+  </div>
 
 <p>The Handmaid's Tale is an American dystopian television series created by Bruce Miller, 
     based on the 1985 novel of the same name by Canadian author Margaret Atwood.  
