--- a/mainpage.html
+++ b/mainpage.html
@@ -39,15 +39,7 @@
 <iframe width="420" height="315" autoplay muted loop id="myVideo">
     <source href="https://www.youtube.com/watch?v=81PyH5TH-NQ" type="video/mp4">
 </iframe>
-  
-  <!-- Optional: some overlay text to describe the video -->
-  <div class="content">
-    <h1>Hulu preview</h1>
-    <p><i>"We didn't wake up, when they blamed terrorists and suspended the Constitution..."</i></p>
-    <!-- Use a button to pause/play the video with JavaScript -->
-    <button id="myBtn" onclick="myFunction()">Pause</button>
-  </div>
-
+    
 <p>The Handmaid's Tale is an American dystopian television series created by Bruce Miller, 
     based on the 1985 novel of the same name by Canadian author Margaret Atwood.  
 </p>
@@ -71,7 +63,6 @@ class="authorpicture"/></a>
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/360/original/tht3.jpeg?1707360662"/>
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/526/original/tht4.jpeg?1707447078"/>
 </div>
-</div>
 
 <br />
 <br />
@@ -85,7 +76,7 @@ class="authorpicture"/></a>
 
 <script>
 
-    alert ("Watch this series on Hulu for $6.99/month");
+    alert ("Watch on Hulu for $6.99/month");
 
     function changeTheme(){
         let body=document.querySelector("body");
@@ -98,22 +89,7 @@ class="authorpicture"/></a>
     themeButton.addEventListener("click", changeTheme);
 
 
-// Get the video
-var video = document.getElementById("myVideo");
 
-// Get the button
-var btn = document.getElementById("myBtn");
-
-// Pause and play the video, and change the button text
-function myFunction() {
-  if (video.paused) {
-    video.play();
-    btn.innerHTML = "Pause";
-  } else {
-    video.pause();
-    btn.innerHTML = "Play";
-  }
-}
 </script>
 
 </body>
