fixed the footer
when video was removed, the footer was accidentally placed inside the container.

--- a/mainpage.html
+++ b/mainpage.html
@@ -63,6 +63,7 @@ class="authorpicture"/></a>
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/360/original/tht3.jpeg?1707360662"/>
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/526/original/tht4.jpeg?1707447078"/>
 </div>
+</div>
 
 <br />
 <br />
