Two containers in progress
designing two containers, side by side to show case the author's work.

--- a/mainpage.html
+++ b/mainpage.html
@@ -30,9 +30,8 @@
 
 <button class="theme-button">dark theme</button>
 
+<div class="content">
 <div class="container">
-
-
 <h1>Dystopian TV Series</h1>
 <h2>THE HANDMAID'S TALE</h2>
 
@@ -62,6 +61,16 @@ class="authorpicture"/></a>
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/358/original/THT2.jpeg?1707360338"/>
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/360/original/tht3.jpeg?1707360662"/>
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/526/original/tht4.jpeg?1707447078"/>
+</div>
+</div>
+
+<div class="books">
+  <div class="grid">
+    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/841/original/THT1.jpeg?1707105859"/>   
+    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/358/original/THT2.jpeg?1707360338"/>
+    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/360/original/tht3.jpeg?1707360662"/>
+    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/526/original/tht4.jpeg?1707447078"/>
+  </div>
 </div>
 </div>
 
