Working on container 2

--- a/mainpage.html
+++ b/mainpage.html
@@ -35,8 +35,8 @@
 <h1>Dystopian TV Series</h1>
 <h2>THE HANDMAID'S TALE</h2>
 
-<iframe width="420" height="315" autoplay muted loop id="myVideo">
-    <source href="https://www.youtube.com/watch?v=81PyH5TH-NQ" type="video/mp4">
+<iframe width="420" height="315">
+    <source href="https://www.youtube.com/watch?v=81PyH5TH-NQ">
 </iframe>
     
 <p>The Handmaid's Tale is an American dystopian television series created by Bruce Miller, 
@@ -65,11 +65,12 @@ class="authorpicture"/></a>
 </div>
 
 <div class="books">
+  <p>Margaret Atwood's Books</p>
   <div class="grid">
-    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/113/841/original/THT1.jpeg?1707105859"/>   
-    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/358/original/THT2.jpeg?1707360338"/>
-    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/360/original/tht3.jpeg?1707360662"/>
-    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/526/original/tht4.jpeg?1707447078"/>
+    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/115/026/original/MAB1.jpeg?1707707375"/>   
+    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/115/025/original/MAB2.jpeg?1707707369"/>
+    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/115/024/original/MAB3.jpeg?1707707361"/>
+    <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/115/023/original/MAB4.jpeg?1707707351"/>
   </div>
 </div>
 </div>
