--- a/mainpage.html
+++ b/mainpage.html
@@ -35,8 +35,9 @@
 <h1>Dystopian TV Series</h1>
 <h2>THE HANDMAID'S TALE</h2>
 
-<iframe width="420" height="315">
-    <source href="https://www.youtube.com/watch?v=81PyH5TH-NQ">
+
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=81PyH5TH-NQ" title="The Handmaid Tale's" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+allowfullscreen>
 </iframe>
     
 <p>The Handmaid's Tale is an American dystopian television series created by Bruce Miller, 
