--- a/mainpage.html
+++ b/mainpage.html
@@ -102,11 +102,11 @@ a:hover{
  
 }
 .container{
-    max-width: 600px;
+    width: 50vw;
     background:whitesmoke;
     padding: 20px;
     border-radius: 10px;
-    margin:20px auto;
+    margin:20px 45px;
 }
 
 .books{
@@ -125,17 +125,34 @@ a:hover{
     max-width: 80%;
 }
 
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio (height / width) */
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 
 .grid{
     display: grid;
     grid-template-columns:1fr 1fr;
     grid-gap: 10px;
     margin: 10px;
+    width:100%;
 
 }
 
 .grid img{
-    width:100%;
+    width:150%;
     border-radius: 10px;
 }
 
@@ -197,14 +214,14 @@ footer{
 
 <div class="content">
 <div class="container">
+    <center>
 <h1>Dystopian TV Series</h1>
 <h2>THE HANDMAID'S TALE</h2>
 
+<div class="video-container">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/81PyH5TH-NQ?si=j31a286V0_xaeyKp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+</div>
 
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=81PyH5TH-NQ" title="The Handmaid Tale's" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-allowfullscreen>
-</iframe>
-    
 <p>The Handmaid's Tale is an American dystopian television series created by Bruce Miller, 
     based on the 1985 novel of the same name by Canadian author Margaret Atwood.  
 </p>
@@ -228,6 +245,7 @@ class="authorpicture"/></a>
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/360/original/tht3.jpeg?1707360662"/>
 <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/114/526/original/tht4.jpeg?1707447078"/>
 </div>
+</center>
 </div>
 
 <div class="books">
