testing adding a video

--- a/mainpage.html
+++ b/mainpage.html
@@ -102,15 +102,15 @@ a:hover{
  
 }
 .container{
-    width: 50vw;
+    max-width:600px;
     background:whitesmoke;
     padding: 20px;
     border-radius: 10px;
-    margin:20px 45px;
+    margin:20px auto;
 }
 
 .books{
-    max-width: 600px;
+    max-width:600px;
     padding: 20px;
     margin:20px auto;
     color:rebeccapurple;
@@ -125,20 +125,6 @@ a:hover{
     max-width: 80%;
 }
 
-.video-container {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio (height / width) */
-    height: 0;
-    overflow: hidden;
-}
-
-.video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
 
 
 
@@ -218,13 +204,10 @@ footer{
 <h1>Dystopian TV Series</h1>
 <h2>THE HANDMAID'S TALE</h2>
 
-<div class="video-container">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/81PyH5TH-NQ?si=j31a286V0_xaeyKp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div>
-
 <p>The Handmaid's Tale is an American dystopian television series created by Bruce Miller, 
     based on the 1985 novel of the same name by Canadian author Margaret Atwood.  
 </p>
+
 
 <button><a href="https://en.wikipedia.org/wiki/The_Handmaid%27s_Tale_(TV_series)"> More about the series</a></button>
 
